Adding section comments

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+
+  <!-- Representative Info -->
   <article class="rep" id="jim-cooper">
     <section class="rep__info">
       <h1 class="rep__name">Rep. Jim Cooper</h1>
@@ -16,7 +18,7 @@
       <img class="rep__image" src="https://www.govtrack.us/data/photos/400081-200px.jpeg" alt="Rep. Jim Cooper" />
     </section>
 
-
+    <!-- Committee Membership -->
     <section class="rep__committees">
       <h2 class="section-title">Committee Membership</h2>
       <ul>
