Reorganizing subcommittee details

--- a/index.html
+++ b/index.html
@@ -12,10 +12,15 @@
   <!-- Representative Info -->
   <article class="rep" id="jim-cooper">
     <section class="rep__info">
-      <h1 class="rep__name">Rep. Jim Cooper</h1>
-      <span class="rep__district">Tennessee&rsquo;s 5th District</span>
-      <span class="rep__party">Democrat</span>
-      <img class="rep__image" src="https://www.govtrack.us/data/photos/400081-200px.jpeg" alt="Rep. Jim Cooper" />
+      <div>
+        <h1 class="rep__name">Rep. Jim Cooper</h1>
+        <span class="rep__district">Tennessee&rsquo;s 5th District</span>
+        <span class="rep__party">Democrat</span>
+      </div>
+      <div class="rep__image">
+        <img src="https://www.govtrack.us/data/photos/400081-200px.jpeg" alt="Rep. Jim Cooper" />
+      </div>
+      
     </section>
 
     <!-- Committee Membership -->
@@ -26,13 +31,16 @@
           <p class="committee__name">House Committee on Armed Services</p>
           <ul class="subcommittees">
             <li class="subcommittee">
-              <p class="subcommittee__name">Ranking Member, Subcommittee on Strategic Forces</p>
+              <p class="subcommittee__name">Subcommittee on Strategic Forces</p>
+              <p class="subcommittee__position">Ranking Member</p>
             </li>
             <li class="subcommittee">
-              <p class="subcommittee__name">Member, Subcommittee on Emerging Threats and Capabilities</p>
+              <p class="subcommittee__name">Subcommittee on Emerging Threats and Capabilities</p>
+              <p class="subcommittee__position">Member</p>
             </li>
             <li class="subcommittee">
-              <p class="subcommittee__name">Member, Subcommittee on Tactical Air and Land Forces</p>
+              <p class="subcommittee__name">Subcommittee on Tactical Air and Land Forces</p>
+              <p class="subcommittee__position">Member</p>
             </li>
           </ul>
         </li>
@@ -40,7 +48,8 @@
           <p>House Committee on Oversight and Government Reform</p>
           <ul class="subcommittees">
             <li class="subcommittee">
-              <p class="subcommittee__name">Member, Subcommittee on Healthcare, Benefits, and Administrative Rules</p>
+              <p class="subcommittee__name">Subcommittee on Healthcare, Benefits, and Administrative Rules</p>
+              <p class="subcommittee__position">Member</p>
             </li>
           </ul>
         </li>
