Adding missing classes and header tags in Committee section

--- a/index.html
+++ b/index.html
@@ -28,27 +28,27 @@
       <h2 class="section-title">Committee Membership</h2>
       <ul>
         <li class="committee">
-          <p class="committee__name">House Committee on Armed Services</p>
+          <h3 class="committee__name">House Committee on Armed Services</h3>
           <ul class="subcommittees">
             <li class="subcommittee">
-              <p class="subcommittee__name">Subcommittee on Strategic Forces</p>
+              <h4 class="subcommittee__name">Subcommittee on Strategic Forces</h4>
               <p class="subcommittee__position">Ranking Member</p>
             </li>
             <li class="subcommittee">
-              <p class="subcommittee__name">Subcommittee on Emerging Threats and Capabilities</p>
+              <h4 class="subcommittee__name">Subcommittee on Emerging Threats and Capabilities</h4>
               <p class="subcommittee__position">Member</p>
             </li>
             <li class="subcommittee">
-              <p class="subcommittee__name">Subcommittee on Tactical Air and Land Forces</p>
+              <h4 class="subcommittee__name">Subcommittee on Tactical Air and Land Forces</h4>
               <p class="subcommittee__position">Member</p>
             </li>
           </ul>
         </li>
         <li class="committee">
-          <p>House Committee on Oversight and Government Reform</p>
+          <h3 class="committee__name">House Committee on Oversight and Government Reform</h3>
           <ul class="subcommittees">
             <li class="subcommittee">
-              <p class="subcommittee__name">Subcommittee on Healthcare, Benefits, and Administrative Rules</p>
+              <h4 class="subcommittee__name">Subcommittee on Healthcare, Benefits, and Administrative Rules</h4>
               <p class="subcommittee__position">Member</p>
             </li>
           </ul>
