Implement flexbox for committees and legislation boxes

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
       
     </section>
 
+    <div class="flex-wrapper">
     <!-- Committee Membership -->
     <section class="rep__committees">
       <h2 class="section-title">Committee Membership</h2>
@@ -82,6 +83,8 @@
         </li>
       </ul>
     </section>
+
+    </div><!--flex-wrapper-->
   </article>
 </body>
 </html>
